--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^1.2.0",
     "next": "14.0.2",
+    "pino-pretty": "^10.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "viem": "^1.19.1",
+    "wagmi": "^1.4.6"
   },
   "devDependencies": {
     "@types/node": "^20",
