--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "wagmi": "^1.4.6"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.27",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
